✨ Enhance UI with gradient title and responsive layout; remove commented logos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
   <app-header/>
 
   <p class="subtitle">VASS</p>
-  <h1 class="title">{{title}}</h1>
+  <article>
+    <h1 class="title">{{title}}</h1>
+  </article>
 
   <div class="buttons-container">
     <button (click)="showEncrypt()"
