--- a/src/app/modules/decrypt/views/decrypt-area/decrypt-area.component.scss
+++ b/src/app/modules/decrypt/views/decrypt-area/decrypt-area.component.scss
@@ -3,9 +3,9 @@
 .decrypt-container {
   position: relative;
   z-index: 5;
-  padding: 2rem;
+  padding: 1.5rem 2rem;
   text-align: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 120px);
   display: flex;
   flex-direction: column;
 
