--- a/src/app/modules/decrypt/views/header/header.component.html
+++ b/src/app/modules/decrypt/views/header/header.component.html
@@ -7,6 +7,8 @@
     -->
   </div>
 
+  <div class="subtitle">VASS</div>
+
   <div class="actions">
     <a href="https://github.com/your-username" target="_blank">
       <mat-icon>code</mat-icon>
