--- a/src/app/modules/decrypt/views/decrypt-area/decrypt-area.component.scss
+++ b/src/app/modules/decrypt/views/decrypt-area/decrypt-area.component.scss
@@ -81,6 +81,10 @@
         position: relative;
         width: 100%;
 
+        .animated-border {
+          display: none;
+        }
+
         &.processing {
           textarea {
             opacity: 0.6;
@@ -212,6 +216,10 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+
+        .animated-border {
+          display: none;
+        }
 
         .pre-content {
           position: absolute;
