--- a/src/app/modules/decrypt/views/encrypt-area/encrypt-area.component.scss
+++ b/src/app/modules/decrypt/views/encrypt-area/encrypt-area.component.scss
@@ -88,6 +88,10 @@
         cursor: pointer;
         overflow: hidden;
 
+        .animated-border {
+          display: none;
+        }
+
         &.dragging {
           border-color: #3CBCDD;
           background-color: rgba(60, 188, 221, 0.1);
@@ -220,6 +224,10 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+
+        .animated-border {
+          display: none;
+        }
 
         .pre-content {
           position: absolute;
