--- a/src/app/modules/decrypt/views/header/header.component.scss
+++ b/src/app/modules/decrypt/views/header/header.component.scss
@@ -30,7 +30,7 @@
     left: 0;
     right: 0;
     text-align: center;
-    color: var(--text-tertiary);
+    color: var(--text-secondary);
     font-size: 1.1rem;
     font-weight: 400;
   }
